# Aura-State

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
aura_state/: __init__.py
aura_state/compiler/: __init__.py  dspy_tuner.py  json_generator.py  schema_compiler.py
aura_state/consensus/: auto_vote.py
aura_state/core/: adaptive_graph.py  engine.py  exceptions.py  providers.py  verification_loop.py
aura_state/execution/: sandbox.py  tracer.py
aura_state/loaders/: json_graph.py
aura_state/memory/: pruner.py  trajectory_cache.py
aura_state/verification/: conformal.py  proof_engine.py  temporal_verifier.py
docs/: ALGORITHMS.md  GUIDE.md
examples/benchmark/: README.md  dataset.py  nodes.py  run_benchmark.py  run_live.py
tests/: test_innovations.py  test_phase9.py  test_router.py
